<resources>
    <string name="app_name">AnjacAlumni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="anjac_alumni">ANJAC Alumni</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="not_a_memeber_signup">Not A Memeber Signup</string>
    <string name="register_form">REGISTER FORM</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_mail_id">Enter Your Mail Id</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="year_of_entry">Year Of Entry</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="roll_no">Roll No</string>
    <string name="enter_your_place">Enter your Place</string>
    <string name="logout">LogOut</string>
    <string name="otp">Enter Your OTP</string>
    <string name="acitvate">Acitvate</string>
    <string name="activate">activate</string>
</resources>
