<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#00b3e3"
       app:cardCornerRadius="80dp"
       app:cardBackgroundColor="#00b3e3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/register_form"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fnamelayout"
            android:layout_width="140dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/fname"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lnamelayout"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:gravity="end">

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:hint="@string/last_name" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/maillayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_mail_id" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phonelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/enter_your_mobile_number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rpassword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/rpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/crpassword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/crpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:text="Next"
        android:layout_marginLeft="200dp"/>
</LinearLayout>
   </android.support.v7.widget.CardView>
</RelativeLayout>