<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_your_mail_id" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            tools:ignore="NotSibling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/acitvate"
            android:onClick="checkotp"/>

    </RelativeLayout>


</RelativeLayout>