<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#00b3e3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="90dp"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        app:cardElevation="20dp"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawableStart="@drawable/ic_user"
                    android:inputType="text"
                    android:hint="@string/user_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                tools:ignore="NotSibling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_layout"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawableStart="@drawable/ic_pass"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:onClick="loginuser"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_below="@id/login"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/signup"
                    android:text="@string/not_a_memeber_signup"
                    android:textColor="#8b3410"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:paddingLeft="10dp"
                    />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>