<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00b3e3"
        app:cardCornerRadius="80dp"
        app:cardBackgroundColor="#00b3e3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginBottom="25dp"
            android:text="@string/register_form"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Spinner
                    android:id="@+id/courses"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="40dp"
                    />

                <Spinner
                    android:layout_marginBottom="12dp"
                    android:id="@+id/branches"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="40dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/yearayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minEms="4"
                        android:maxEms="4"
                        android:singleLine="true"
                        android:hint="@string/year_of_entry" />

                </android.support.design.widget.TextInputLayout>

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="10dp"                        android:inputType="phone"
                        android:hint="@string/date_of_birth" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/rollnolayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/rollno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/roll_no" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/placelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/enter_your_place" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:text="Submit"
                android:layout_marginTop="20dp"
                android:onClick="register"
                android:layout_marginLeft="200dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>